advanced/keycloak/manifests/sts-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
  namespace: keycloak
  labels:
    app: keycloak
    component: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
      component: postgresql
  serviceName: postgresql
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: keycloak
        component: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:9.6.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command: [ "sh", "-c", "exec pg_isready --host $POD_IP" ]
          failureThreshold: 6
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        ports:
        - containerPort: 5432
          name: postgresql
          protocol: TCP
        readinessProbe:
          exec:
            command: [ "sh", "-c", "exec pg_isready --host $POD_IP" ]
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - mountPath: /var/lib/postgresql/data/pgdata
          name: data
          subPath: postgresql-db
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi
