advanced/keycloak/manifests/svc-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: keycloak
  labels:
    app: keycloak
    component: postgresql
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP
    targetPort: postgresql
  selector:
    app: keycloak
    component: postgresql
